<resources>
    <string name="app_name">Ski Rental</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="btn_sign_in_with_google">Sign in With Google</string>
    <string name="btn_sign_in_anonymous">Sign in As Anonymous</string>
    <string name="welcome_to_ski_rental">Welcome to \n SKI RENTAL</string>
    <string name="welcome_introduce_your_details">Welcome! \n Introduce your \n details</string>
    <string name="you_can_modify_your_details">You can modify your details</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="shoe_size">Shoe size</string>
    <string name="experience">Ski Experience</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="preference_file_key">com.example.skirental.PREFERENCE_FILE_KEY</string>
    <string name="button_weather">weather</string>
    <string name="button_rent_equipment">rent equipment</string>
    <string name="button_personal_settings">personal settings</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_cart">Cart</string>
    <string name="title_weather">Weather</string>
    <string name="title_account">Account</string>
    <string name="btn_instant_rent">INSTANT RENT</string>
    <string name="btn_ski_resort">SKI RESORT</string>
    <string name="find_your_equipment_here">Find your equipment here</string>
    <string name="rent_equipment">Rent equipment</string>
    <string name="btn_add_to_cart">Add to cart</string>
    <string name="list_item_price_text">%1$s Lei</string>
    <string name="tv_condition">Condition</string>
    <string name="btn_next_step">Next step</string>
    <string name="btn_add_items">Add items</string>
    <string name="tv_add_additional_comment">Add additional comment</string>
    <string name="et_add_your_comment_hint">Your comment…</string>
    <string name="text_display_price">%1$s Lei</string>
    <string name="text_total_price">Total Price</string>
    <string name="text_welcome_to">Welcome to</string>
    <string name="text_welcome_to_ski_resort">SKI RESORT</string>
    <string name="text_welcome_to_ski_resort_name">Muntele Mic</string>
    <string name="text_ski">SKI</string>
    <string name="text_ski_boots">SKI BOOTS</string>
    <string name="text_ski_poles">POLES</string>
    <string name="text_snowboard">SNOWBOARD</string>
    <string name="snowboard_boots">SNOWBOARD \nBOOTS</string>
    <string name="helmet">HELMET</string>
    <string name="goggles">GOGGLES</string>
    <string name="text_search_equipment">Search equipment…</string>
    <string name="list_item_cm_length">%1$s cm</string>
    <string name="list_item_size_length">size %1$s</string>
    <string name="find_the_best_for_me">Find the best for me</string>
    <string name="apply_filters">Apply</string>
    <string name="length">Length</string>
    <string name="filter_equipments">Filter equipments</string>
    <string name="custom">Custom</string>
    <string name="reset">Reset</string>
    <string name="whoops_we_couldn_t_find_any_equipment_based_on_your_requirements">Whoops! we couldn\'t find any equipment based on your requirements</string>
    <string name="payments_show_name">Vlad Payments</string>
    <string name="pay_with_google_pay">Pay with Google Pay</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="tv_pay_total_price">%1$s LEI</string>
    <string name="hey_there">Hey there!</string>
    <string name="my_account">My account</string>
    <string name="my_personal_details">My personal details</string>
    <string name="account_details">Account details</string>
    <string name="app_version_1_0_0">App version: 1.0.0</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="logout">Logout</string>
    <string name="here_for_you">Here for you</string>
    <string name="email">Email:</string>
    <string name="name">Name:</string>
    <string name="terms_and_conditions_text_one">8.1. The fees for the Products and Support Services are listed in the Order Form. In addition to the fees listed in the Order
Form, Customer shall be responsible for all personal property, sales, use, value-added, withholding and similar taxes (other
than taxes on Axway\'s net income) arising from the transactions described in this Agreement. Where Customer\'s Use of the
Software or receipt of Services is exempt from sales or other taxes, Customer shall provide Axway with the appropriate
exemption certificate. All amounts payable under this Agreement shall be paid net thirty (30) days from the invoice date,
unless stated otherwise in an Order Form.
8.2. The license fee is fixed and not subject to revision. It shall be invoiced in full on the Effective Date, unless stated
otherwise in an Order Form.
8.3. Support Services fees shall be invoiced on the Effective Date and are due net thirty (30) days from the invoice date
unless otherwise stated in an Order Form. Support Services fees are subject to annual revision as stated in the relevant
Specific Conditions.
8.4. Fees for professional services shall be invoiced at the end of the month in which they are provided. Travel and
accommodation expenses incurred to provide training, technical assistance, support and installation services shall be
invoiced to Customer based on the actual and reasonable costs incurred by Axway. Supporting documents will be provided
upon reasonable request. Fees for professional services are subject to annual revision as stated in the relevant Specific
Conditions.
8.5. Fees or other amounts remaining unpaid for thirty (30) days following the date of invoice shall be considered overdue
and shall remain payable by Customer together with interest for late payment from the date payable at the rate of 4% per
annum above the base rate for the time being of Lloyds TSB Bank plc. In addition to the above provision for late payment,
Axway reserves the right to suspend performance of any Additional Services (which includes hosting services, as applicable).</string>
    <string name="payment_terms_and_conditions">PAYMENT TERMS AND CONDITIONS</string>
    <string name="intellectual_property">INTELLECTUAL PROPERTY</string>
    <string name="terms_and_conditions_text_two">10.1. Only a right to Use the Licensed Component is granted to Customer; any extension of the right granted shall be
    subject to Axway’s prior written consent. The Parties acknowledge and agree that Customer has only Use rights with
    respect to the Licensed Component, but Customer owns the Hardware Product. Axway retains title in and to the Licensed
    Component, including any portion thereof and information, materials or copy made from it or any part of it and copyright
    in the Licensed Component.
    10.2. If Customer wishes to make the Product interoperable with other programs, other than as envisaged in the
    Documentation, Axway may make the necessary information available to Customer upon receipt of a written request.
    10.3. Except as otherwise provided for in this Agreement or permitted under applicable law, Customer will not, directly or
    through any person or entity, in any form or manner (i) copy, sublicense, lease, assign, distribute, reproduce, incorporate,
    use or allow access to the Product or modify, prepare derivative works from the Licensed Component except as explicitly
    permitted under this Agreement or (ii) decrypt, extract, decompile or otherwise reverse engineer the Licensed Component,
    or otherwise disassemble, derive or attempt to derive the source code of, or any processes, methods, specifications,
    protocols, algorithms, interfaces, data structures, or other information embodied or used in, the Product. The restrictions of
    this Article 10 shall survive the termination of the Agreement.
    If Customer has purchased licenses for a Trading Partner, Customer shall ensure each Trading Partner is bound to
    provisions at least as protective of Axway as Articles 4, 10, 12, 14 and 15. Customer shall promptly notify Axway of any
    unauthorized use, disclosure, reproduction, or distribution of any Product, which comes to Customer’s attention, or which
    Customer reasonably suspects. Customer may Use any Third Party Software products or modules supplied by Axway solely
    with the Licensed Component.
    10.4. If, in the performance of any Additional Services hereunder, Axway is required to use any Customer supplied
    programs, Customer hereby warrants that it has obtained any necessary authorizations and licenses required to allow Axway
    to access and use such program as necessary for performance of the Services. Customer shall provide any associated
        supporting documentation to Axway promptly upon request./></string>
    <string name="administrator">Administrator</string>
    <string name="delete_equipment">Delete equipment</string>
    <string name="add_equipment">Add equipment</string>
    <string name="retrieve_equipment">Retrieve Equipment</string>
    <string name="retrieve_equipment_title">Retrieve\n Equipment</string>
    <string name="type">Type</string>
    <string name="usage">Usage</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="here_goes_description">Give a short description…</string>
    <string name="items_specifications">Items specifications</string>
    <string name="long_description">Long description…</string>
    <string name="scan_equipment">Scan equipment</string>
    <string name="my_account_2">My Account</string>
    <string name="weather">Weather</string>
    <string name="cart">Cart</string>
    <string name="search_equipment">Search Equipment</string>
    <string name="home">Home</string>
    <string name="payment">Payment</string>
    <string name="sign_in_anonymously">Sign in anonymously</string>
    <string name="or">or</string>
</resources>