<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.AccountFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.skirental.viewmodels.AccountViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_light_extra_transparent_blue"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_account_welcome_message"
            style="@style/TitleText"
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hey_there"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVerticalStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.08"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_account_my_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/NormalTextStyle"
            android:textSize="20sp"
            android:textColor="@color/color_gray_2"
            android:layout_marginTop="50dp"
            android:text="@string/my_account"
            app:layout_constraintTop_toBottomOf="@+id/tv_account_welcome_message"
            app:layout_constraintStart_toStartOf="@+id/guidelineVerticalStart"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_account_my_personal_details"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            style="@style/NormalTextStyle"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:layout_marginTop="25dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:text="@string/my_personal_details"
            app:layout_constraintTop_toBottomOf="@+id/tv_account_my_account"
            app:layout_constraintStart_toStartOf="@id/guidelineVerticalStart"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/tv_account_vertical_line_one"
            android:layout_width="match_parent"
            android:background="@color/color_gray_2"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_account_my_personal_details"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_account_account_details"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            style="@style/NormalTextStyle"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:text="@string/account_details"
            app:layout_constraintTop_toBottomOf="@+id/tv_account_vertical_line_one"
            app:layout_constraintStart_toStartOf="@id/guidelineVerticalStart"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_account_terms_and_conditions"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            style="@style/NormalTextStyle"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:text="@string/terms_and_conditions"
            app:layout_constraintTop_toBottomOf="@+id/tv_account_here_for_you"
            app:layout_constraintStart_toStartOf="@id/guidelineVerticalStart"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_account_here_for_you"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/NormalTextStyle"
            android:textSize="20sp"
            android:textColor="@color/color_gray_2"
            android:layout_marginTop="30dp"
            android:text="@string/here_for_you"
            app:layout_constraintTop_toBottomOf="@+id/tv_account_account_details"
            app:layout_constraintStart_toStartOf="@+id/guidelineVerticalStart"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/tv_account_vertical_line_three"
            android:layout_width="match_parent"
            android:background="@color/color_gray_2"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_account_terms_and_conditions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_account_app_version"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            style="@style/NormalTextStyle"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:text="@string/app_version_1_0_0"
            app:layout_constraintTop_toBottomOf="@+id/tv_account_vertical_line_three"
            app:layout_constraintStart_toStartOf="@id/guidelineVerticalStart"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_account_logout"
            android:backgroundTint="@color/color_gray_3"
            android:stateListAnimator="@null"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height_large"
            android:layout_marginBottom="100dp"
            android:text="@string/logout"
            android:textColor="@color/color_red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>