<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.AdminHomeFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.skirental.viewmodels.AdminHomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_signin_background_gradient">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_admin_administrator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TitleText"
            android:layout_marginTop="30dp"
            android:text="@string/administrator"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_admin_add_equipment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height_medium_large"
            android:text="@string/add_equipment"
            android:textStyle="bold"
            android:textAlignment="center"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:onClick="@{() -> viewModel.onAddEquipmentClicked()}"
            android:layout_marginBottom="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_admin_delete_equipment"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_admin_delete_equipment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height_medium_large"
            android:text="@string/delete_equipment"
            android:textStyle="bold"
            android:textAlignment="center"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_admin_retrieve_equipment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height_medium_large"
            android:text="@string/retrieve_equipment"
            android:textStyle="bold"
            android:textAlignment="center"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_admin_delete_equipment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
