<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.TermsAndConditionsFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbarSize="10dp"
        android:scrollbarStyle="outsideInset"
        android:scrollbarThumbVertical="@color/custom_primaryColor"
        android:scrollbars="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_light_extra_transparent_blue">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_payment_terms_and_cond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                style="@style/NormalTextStyle"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginStart="30dp"
                android:text="@string/payment_terms_and_conditions"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_terms_and_cond_one"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/terms_and_conditions_text_one"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="80dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_payment_terms_and_cond"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_payment_terms_and_cond_intellectual_property"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                style="@style/NormalTextStyle"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginStart="30dp"
                android:text="@string/intellectual_property"
                app:layout_constraintTop_toBottomOf="@+id/tv_terms_and_cond_one"
                app:layout_constraintStart_toStartOf="parent"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_terms_and_cond_two"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/terms_and_conditions_text_two"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="80dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_payment_terms_and_cond_intellectual_property"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
