<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.SignInFragment">

    <data>

        <variable
            name="viewModel"
            type="com.example.skirental.viewmodels.SignInViewModel" />
        <variable
            name="isLoading"
            type="java.lang.Boolean" />
        <import type="android.view.View" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_signin_background_gradient">

        <ProgressBar
            android:id="@+id/pb_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:indeterminateTint="@color/color_blue_progress_bar"
            android:visibility="@{isLoading ? View.VISIBLE : View.GONE}"
            app:layout_constraintVertical_bias="0.4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/welcome_to_ski_rental"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/google_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/rounded_corners"
            android:drawableStart="@drawable/ic_google"
            android:drawablePadding="8dp"
            android:padding="8dp"
            android:text="@string/btn_sign_in_with_google"
            android:textAllCaps="false"
            android:textColor="@color/GoogleTextColor"
            android:textStyle="bold"
            android:onClick="@{() -> viewModel.onSignInClicked()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:layout_marginTop="10dp"
            android:textStyle="italic"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/google_login_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_sign_in_anonymously"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/NormalTextStyle"
            android:textStyle="italic"
            android:textColor="@color/color_dark_blue"
            android:text="@string/sign_in_anonymously"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_or"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>