<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.AccountDetails">

    <data>
        <variable
            name="viewModel"
            type="com.example.skirental.viewmodels.AccountDetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_signin_background_gradient">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVerticalStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.08"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_account_details_my_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/NormalTextStyle"
            android:textSize="25sp"
            android:textColor="@color/color_gray_2"
            android:layout_marginTop="100dp"
            android:text="@string/account_details"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/guidelineVerticalStart"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_account_details_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/NormalTextStyle"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:text="@string/email"
            app:layout_constraintTop_toBottomOf="@+id/tv_account_details_my_account"
            app:layout_constraintStart_toStartOf="@id/guidelineVerticalStart"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_account_details_name"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            style="@style/NormalTextStyle"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:text="@string/name"
            app:layout_constraintTop_toBottomOf="@+id/tv_account_details_email"
            app:layout_constraintStart_toStartOf="@id/guidelineVerticalStart"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

